# qqnt-sdk

./: README.md
.github/workflows/: build_qq_libs.yml
cmake/: qqnt_sdk.cmake
examples/cmake_consumer/: CMakeLists.txt  main.cpp
scripts/: detect_version.sh  extract_linux.sh  fetch_headers.sh  gen_import_libs.sh  pe_to_def.mjs  resolve.mjs
